--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="flex w-full h-full bg-[#631D25] navbar mx-auto my-auto py-2 px-8 gap-3 justify-between backdrop-blur-md">
         <div class="flex items-center gap-4 w-[220px]">
           <a href="#hero" class="md:h-2/3 my-auto"><img src="./img/logo.svg" alt="" class="w-full h-full" /></a>
-          <h1 class="text-2xl font-plus font-bold text-white txt0">BaksoPatih</h1>
+          <h1 class="text-lg md:text-2xl font-plus font-bold text-white txt0">BaksoPatih</h1>
         </div>
 
         <!-- Nav Asli -->
